parser/src/test/resources/corpus/valid/52_type_extension_empty.ff
type extension MarkerFund extends Fund {
}
