parser/src/test/resources/corpus/invalid/52_type_ext_field_no_colon.ff
type extension PeFund extends Fund {
  field commitment_period Period
}
